packages/ui/src/components/editor/panel/Timeline/Timeline.module.scss
.timeline {
  display: flex;
  flex-direction: column;
}

.item {
  display: flex;
  position: relative;

  &:last-child {
    .timelineItem__line {
      display: none;
    }
  }

  &__time {
    font-size: var(--font-size-11px);
    color: var(--cwc-text-color-dimmed);
    white-space: nowrap;
    flex-shrink: 0;
    width: 26vw;
    text-align: right;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  &__connector {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 8px 0 4px;
    flex-shrink: 0;
  }

  &__marker {
    width: 20px;
    height: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
    background-color: var(--vscode-sideBar-background);
    cursor: pointer;
    transform: translateY(-2px);
    position: relative;

    .codicon-star-full {
      color: var(--vscode-list-focusHighlightForeground);
    }
  }

  &__dot {
    width: 7px;
    height: 7px;
    background-color: var(--vscode-foreground);
    opacity: 0.5;
    border-radius: 50%;
  }

  &__star-hover {
    position: absolute;
    opacity: 0;
    color: var(--vscode-foreground);
  }

  &__marker:hover {
    .item__dot {
      opacity: 0;
    }

    .item__star-hover {
      opacity: 1;
    }
  }

  &__line {
    width: 1px;
    flex-grow: 1;
    background-color: var(--vscode-foreground);
    opacity: 0.2;
  }

  &__content {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: var(--padding-2px);
    margin-bottom: 12px;

    &__label {
      cursor: pointer;
      &:hover {
        text-decoration: underline;
      }
    }

    &__description {
      font-size: 12px;
      color: var(--cwc-text-color-dimmed);
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      overflow: hidden;
    }
  }
}

